switch to twitch > broadcaster > [channel]receivers structure

--- a/data/config.json
+++ b/data/config.json
@@ -106,7 +106,7 @@
                 }
             }
         },
-        "chat": {
+        "broadcaster": {
             "limit": 1800,
             "template": "{line}"
         },
