--- a/data/config.json
+++ b/data/config.json
@@ -143,7 +143,7 @@
                             "about",
                             "info"
                         ],
-                        "reply": "bot by allan_walpy"
+                        "reply": "{name} v{version} by {author.name} licensed under {license}\n\nhomepage: {homepage}\n\nbugs: {bugs.url}\n\nauthor's page: {author.url}"
                     }
                 }
             }
