fix some startup crashes

--- a/data/config.json
+++ b/data/config.json
@@ -169,7 +169,7 @@
                         "reply": "удалено"
                     },
                     "emojie": {
-                        "path": "emoji/core",
+                        "path": "emojie/core",
                         "name": [
                             "emojie",
                             "emoji",
